--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,78 @@
 .text-shadow-lg {
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
 }
+
+
+
+/*CARDS*/
+.info-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+}
+
+@media (min-width: 768px) {
+    .info-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* Tarjeta */
+.info-card {
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+    background: #000;
+    height: 180px; 
+    cursor: pointer;
+    transition: transform .3s ease;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+}
+
+.info-card:hover {
+    transform: translateY(-6px);
+}
+
+/* Imagen difuminada */
+.info-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(65%); 
+}
+
+.info-card::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(255, 255, 255, 0.404);
+    backdrop-filter: blur(3px); 
+    z-index: 1;
+}
+
+/* Contenido centrado */
+.info-card .content {
+    position: absolute;
+    inset: 0;
+    z-index: 2;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-a{
+
+     width: 80px !important;   
+    height: auto !important;  
+    flex-shrink: 0;          
+    object-fit: contain;  
+    margin-right: 0px;
+}
+
+.info-card h3 {
+    font-size: 20px;
+    font-weight: 900;
+    text-align: center;
+}
